--- a/PrimeraSemana/Martes/Ejercicios/WEB3_proteco/index.html
+++ b/PrimeraSemana/Martes/Ejercicios/WEB3_proteco/index.html
@@ -3,9 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Modelado cajas</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header></header>
+	<div>
+		<p id="padding">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, mollitia dolorum id, itaque magnam voluptatum laborum iusto cumque aut. Libero autem fugiat aperiam velit quae, voluptatum, et praesentium illum molestias.</p>
+	</div>
+	<div>
+		<p id="border">Libero ad temporibus, ex eaque asperiores, alias, ipsum cum adipisci praesentium reprehenderit accusamus? Error impedit voluptate rerum, dolor cumque, atque consequatur excepturi quae tempora soluta, nisi, esse deserunt possimus neque.</p>
+	</div>
+	<div>
+		<p id="margin">Excepturi natus officiis id at optio saepe amet quas deleniti ut veniam consequatur dignissimos dicta rerum dolorem voluptatum dolore reprehenderit tenetur autem praesentium ab, totam repellat expedita. Maxime ea, optio!</p>
+	</div>
+	<div id="photo">
+		<img src="img/messi.jpg" alt="Foto de messi">
+	</div>
 	<footer></footer>
 </body>
 </html>
